--- a/src/assets/css/style.css
+++ b/src/assets/css/style.css
@@ -1,12 +1,58 @@
+.container-main  {
+    width: 100%;
+}
+.container {
+    width: 90%;
+}
+
 .card-text {
     padding: 1rem !important;
+    font-size: 1.2rem !important;
+    max-width: 90%;
+}
+.card {
+    border-width: 2px !important;
+    text-align: center;
 }
 
 .Collapsible__trigger {
     font-weight: 900;
-    font-size: large;
+    font-size: x-large;
     text-decoration: underline;
-    width: 80%;
+    width: 90%;
     padding: 5px;
-    color: #2C6693
+    color: #2C6693;
+}
+
+.footer{
+    margin-top: 1rem;
+    padding: 1rem;
+    background-color: rgb(225, 231, 230);
+    position: fixed;
+    bottom: 0;
+    left: 0;
+    width: 100%;
+    /* max-height: 40px !important; */
+}
+.datasetrow {
+    margin-top: 10px;
+}
+
+.center {
+    text-align: center;
+}
+
+.right-align {
+    text-align: right;
+    align-content: flex-end;
+}
+
+img {
+    max-height: 60px;
+}
+
+.datasetrow {
+    border: 2px solid;
+    border-radius: 20px;
+    padding: 5px;
 }
