--- a/src/assets/css/style.css
+++ b/src/assets/css/style.css
@@ -1,79 +1,168 @@
 /* /* .container-main  {
     width: 100%;
 } */
+
+.App_container__KkHQY {
+  background-color: aliceblue !important; /*#34495e; */
+}
 .container {
-    width: 90%;
-    margin-top: 5%;
-    margin-bottom: 8%;
-    overflow: scroll;
-    background-color: aliceblue;
-} 
+  width: 100%;
+  margin-top: 5%;
+  margin-bottom: 8%;
+  overflow: scroll;
+  border-radius: 25px;
+  padding: 15px;
+  background-color: white;
+  box-shadow: 0px 2px 1px -1px rgba(0, 0, 0, 0.2),
+    0px 1px 1px 0px rgba(0, 0, 0, 0.14), 0px 1px 3px 0px rgba(0, 0, 0, 0.12);
+}
 
 .card-text {
-    padding: 1rem !important;
-    font-size: 1.2rem !important;
-    /* max-width: 90%; */
+  padding: 1rem !important;
+  font-size: 1.2rem !important;
+  /* max-width: 90%; */
 }
 .card {
-    border-width: 2px !important;
-    text-align: left;
+  border-width: 2px !important;
+  text-align: left;
 }
 
 .Collapsible__trigger {
-    font-weight: 900;
-    font-size: x-large;
-    text-decoration: underline;
-    /* width: 90%; */
-    padding: 5px;
-    color: #2C6693;
+  font-weight: 900;
+  font-size: x-large;
+  text-decoration: underline;
+  /* width: 90%; */
+  padding: 5px;
+  color: #2c6693;
 }
 
-.footer{
-    margin-top: 2%;
-    padding: 1rem;
-    background-color: rgb(255, 255, 255);
-    position: fixed;
-    bottom: 0;
-    left: 0;
-    width: 100%;
-    border-top: 1px solid rgb(31, 30, 30, 0.4);
-    /* max-height: 40px !important; */
-}
-.datasetrow {
-    margin-top: 10px;
+.footer {
+  margin-top: 2%;
+  padding: 1rem;
+  background-color: rgb(255, 255, 255);
+  position: fixed;
+  bottom: 0;
+  left: 0;
+  width: 100%;
+  border-top: 1px solid rgb(31, 30, 30, 0.4);
+  /* max-height: 40px !important; */
 }
 
 .center {
-    text-align: center;
+  text-align: center;
 }
 
 .right-align {
-    text-align: right;
-    align-content: flex-end;
+  text-align: right;
+  align-content: flex-end;
 }
 
 img {
-    max-height: 40px;
+  max-height: 50px;
 }
 
 .datasetrow {
-    border: 2px solid rgb(10, 10, 10, 0.5);
-    border-radius: 20px;
-    padding: 5px;
-    max-width: 90%;
-    margin-left: 2rem !important;
+  margin-top: 10px;
+  box-shadow: 0px 2px 1px -1px rgba(0, 0, 0, 0.2),
+    0px 1px 1px 0px rgba(0, 0, 0, 0.14), 0px 1px 3px 0px rgba(0, 0, 0, 0.12);
+  border: 2px solid rgb(10, 10, 10, 0.5);
+  border-radius: 20px;
+  padding: 5px;
+  max-width: 90%;
+  margin-left: 2rem !important;
 }
 
 .flex-container {
-    display: flex;
-    flex-direction: row !important;
-    flex-wrap: wrap;
-    justify-content: start;
+  display: flex;
+  flex-direction: row !important;
+  flex-wrap: wrap;
+  justify-content: start;
 }
 
-@media (max-width:960px) { 
-    .footer {
-        display: none;
-    }
+@media (max-width: 960px) {
+  .footer {
+    display: none;
+  }
+}
 
- }
+.photos img {
+  width: 50%;
+  aspect-ratio: 5/2;
+  object-fit: contain;
+  /* mix-blend-mode:color */
+}
+
+@import url("https://fonts.googleapis.com/css2?family=Open+Sans:wght@600;700&display=swap");
+
+* {
+  box-sizing: border-box;
+}
+
+.page-contain {
+  display: flex;
+  min-height: 10vh;
+  align-items: left;
+  justify-content: left;
+  background: #e7f3f1;
+  border: 0.75em solid white;
+  padding: 1em;
+  font-family: "Open Sans", sans-serif;
+}
+
+.data-card {
+  display: flex;
+  flex-direction: column;
+  flex-wrap: wrap;
+  overflow: hidden;
+  border-radius: 0.5em;
+  text-decoration: none;
+  border: 1px black solid;
+  background: white;
+  margin: 1em;
+  padding: 0.75em 0.5em;
+  box-shadow: 0 1.5em 2.5em -0.5em rgba(#000000, 0.1);
+  transition: transform 0.45s ease, background 0.45s ease;
+  text-align:center;
+}
+ .data-card h4 {
+    color: #627084;
+    text-transform: uppercase;
+    font-size: 1.125em;
+    font-weight: 700;
+    line-height: 1;
+    letter-spacing: 0.1em;
+    margin: 0 0 1.777777778em;
+    transition: color 0.45s ease;
+    padding-top: 1.5em;
+  }
+
+  a:hover {
+    background: #0a58ca;
+    transform: scale(1.02);
+    color: #ffffff;
+  }
+  a h4:hover {
+    color: white;
+  }
+
+
+@keyframes point {
+  0% {
+    transform: translateX(0);
+  }
+  100% {
+    transform: translateX(0.125em);
+  }
+}
+
+.not-active {
+    opacity: 0.5;
+    /* background-color: rgb(61, 63, 57); */
+    /* color: white; */
+}
+.Collapsible:hover {
+    background-color: rgb(37, 32, 18);
+    color: white !important;
+    cursor: pointer;
+    border-radius: 10px;
+}
