--- a/src/assets/css/style.css
+++ b/src/assets/css/style.css
@@ -1,37 +1,21 @@
-/* /* .container-main  {
-    width: 100%;
-} */
-
 .App_container__KkHQY {
   background-color: aliceblue !important; /*#34495e; */
 }
 .container {
   width: 100%;
-  margin-top: 5%;
-  margin-bottom: 8%;
-  overflow: scroll;
+  margin: 1%;
+  /* height: 40vh !important; */
+  overflow:auto;
   border-radius: 25px;
-  padding: 15px;
+  padding: 2%;
   background-color: white;
   box-shadow: 0px 2px 1px -1px rgba(0, 0, 0, 0.2),
     0px 1px 1px 0px rgba(0, 0, 0, 0.14), 0px 1px 3px 0px rgba(0, 0, 0, 0.12);
 }
 
-.card-text {
-  padding: 1rem !important;
-  font-size: 1.2rem !important;
-  /* max-width: 90%; */
-}
-.card {
-  border-width: 2px !important;
-  text-align: left;
-}
-
 .Collapsible__trigger {
-  font-weight: 900;
-  font-size: x-large;
+  font-size: 100%;
   text-decoration: underline;
-  /* width: 90%; */
   padding: 5px;
   color: #2c6693;
 }
@@ -45,7 +29,6 @@
   left: 0;
   width: 100%;
   border-top: 1px solid rgb(31, 30, 30, 0.4);
-  /* max-height: 40px !important; */
 }
 
 .center {
@@ -59,17 +42,6 @@
 
 img {
   max-height: 50px;
-}
-
-.datasetrow {
-  margin-top: 10px;
-  box-shadow: 0px 2px 1px -1px rgba(0, 0, 0, 0.2),
-    0px 1px 1px 0px rgba(0, 0, 0, 0.14), 0px 1px 3px 0px rgba(0, 0, 0, 0.12);
-  border: 2px solid rgb(10, 10, 10, 0.5);
-  border-radius: 20px;
-  padding: 5px;
-  max-width: 90%;
-  margin-left: 2rem !important;
 }
 
 .flex-container {
@@ -89,7 +61,6 @@ img {
   width: 50%;
   aspect-ratio: 5/2;
   object-fit: contain;
-  /* mix-blend-mode:color */
 }
 
 @import url("https://fonts.googleapis.com/css2?family=Open+Sans:wght@600;700&display=swap");
@@ -100,48 +71,43 @@ img {
 
 .page-contain {
   display: flex;
-  min-height: 10vh;
+  flex-wrap: no-wrap;
+  flex-direction: row;
   align-items: left;
   justify-content: left;
   background: #e7f3f1;
-  border: 0.75em solid white;
-  padding: 1em;
+  border: 1px solid white;
+  padding: 1%;
   font-family: "Open Sans", sans-serif;
 }
 
 .data-card {
-  display: flex;
-  flex-direction: column;
-  flex-wrap: wrap;
   overflow: hidden;
   border-radius: 0.5em;
   text-decoration: none;
   border: 1px black solid;
   background: white;
-  margin: 1em;
-  padding: 0.75em 0.5em;
+  margin: 1%;
+  padding: 1%;
   box-shadow: 0 1.5em 2.5em -0.5em rgba(#000000, 0.1);
   transition: transform 0.45s ease, background 0.45s ease;
   text-align:center;
 }
- .data-card h4 {
+ .data-card .hh4 {
     color: #627084;
     text-transform: uppercase;
-    font-size: 1.125em;
+    font-size: 75%;
     font-weight: 700;
-    line-height: 1;
-    letter-spacing: 0.1em;
     margin: 0 0 1.777777778em;
     transition: color 0.45s ease;
-    padding-top: 1.5em;
   }
 
-  a:hover {
+  .data-card:hover {
     background: #0a58ca;
+    color: #ffffff !important;
     transform: scale(1.02);
-    color: #ffffff;
   }
-  a h4:hover {
+  .hh4:hover {
     color: white;
   }
 
@@ -157,11 +123,9 @@ img {
 
 .not-active {
     opacity: 0.5;
-    /* background-color: rgb(61, 63, 57); */
-    /* color: white; */
 }
-.Collapsible:hover {
-    background-color: rgb(37, 32, 18);
+.Collapsible__trigger:hover {
+    background-color: rgb(167, 144, 83);
     color: white !important;
     cursor: pointer;
     border-radius: 10px;
